[package]
name = "unity-js-tools"
version = "1.0.0"
edition = "2021"
authors = ["神代綺凛 <i@loli.best>"]
license = "MIT"
description = "Tools for arkntools/unity-js"
repository = "https://github.com/arkntools/unity-js-tools"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
astc-decode = "0.3.1"
lz4_flex = "0.11.1"
wasm-bindgen = "0.2.87"
