[package]
name = "unity-js-tools"
version = "1.2.0"
edition = "2021"
authors = ["神代綺凛 <i@loli.best>"]
license = "MIT"
description = "Tools for arkntools/unity-js"
repository = "https://github.com/arkntools/unity-js-tools"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex = "0.11.3"
paste = "1.0.15"
texture2ddecoder = "0.0.5"
wasm-bindgen = "0.2.92"
